# Progressive-Delivery-Fastapi

./: .dockerignore  .gitignore  BOOTSTRAP_PACKAGES_CHECKLIST.md  COMMANDS.md  COST_GUARDRAILS.md  DEPLOYMENT_GUIDE.md  Makefile  NEXT_STEPS.md  POST_DESTROY_AUDIT_GUIDE.md  POST_DESTROY_CLEANUP_GUIDE.md  README.md  READ_FIRST_LAUNCH_GUIDE.md  command..txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-staging.yml  promote-production.yml  rollback.yml
app/: database.py  main.py  metrics.py  settings.py
app/tests/: test_health.py  test_version.py
docker/: Dockerfile
docs/: cicd-on-aws.md  github-secrets.md  kubernetes-yaml-explanation.md  manual-production-approval.md  rollback-runbook.md
helm/progressive-app/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
infra/terraform/: .terraform.lock.hcl  README.md  ecr.tf  eks.tf  github-oidc.tf  locals.tf  network.tf  outputs.tf  providers.tf  rds.tf  terraform.tfvars.example  tfplan  tfplan-final  tfplan-scale-down  variables.tf  versions.tf
k8s/argo-rollouts/: install-notes.md
k8s/examples/: bad-v2-error-values.yaml  bad-v2-latency-values.yaml  good-v1-values.yaml  (+1 more)
scripts/: abort-rollout.sh  deploy-production.sh  deploy-staging.sh  promote-rollout.sh  rollback.sh  rollout-status.sh  simulate-traffic.sh  smoke-test.sh
terraform/: AWS_AUDIT_ENV.example.bat  CLEANUP_ENV.example.bat  ec2.tf  ecr.tf  elasticache.tf  iam.tf  main.tf  outputs.tf  post-destroy-audit.ps1  post-destroy-cleanup.ps1  rds-outputs.tf  rds.tf  security-groups.tf  tfplan  variables.tf  vpc.tf
(+19 files in other folders)
