[project]
name = "progressive-delivery-fastapi"
version = "0.1.0"
description = "FastAPI progressive delivery demo with Argo Rollouts, Prometheus analysis, and automated rollback."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
